--- a/Assets/Scripts/TODO
+++ b/Assets/Scripts/TODO
@@ -11,4 +11,10 @@ ANIMATIONS
 - implement more ANIMATIONS
 - fix wrong ANIMATIONS
 
+POWERUP
+- some are giving extra time 
 
+
+
+CINEMACHINE CONFINER
+- need to move with player
